@@ -5,13 +5,7 @@ import gtk
 import os
 from choosebook import ChooseBook
 from firstrecite import FirstRecite
-
-def show_info(message, title = "提示", parent = None):
-	dialog = gtk.MessageDialog(None, gtk.DIALOG_MODAL, gtk.MESSAGE_INFO, gtk.BUTTONS_OK)
-	dialog.set_title(title)
-	dialog.set_markup(message)
-	dialog.run()
-	dialog.destroy()
+from widgets import show_info
 
 class MyWord(gtk.Window):
 	def __init__(self):
