@@ -1,3 +1,6 @@
+2008-01-02
+"MyWord" almost finished the FirstRecite function
+
 2008-01-01
 "MyWord" added the readword function
 
